accidentally included yellow eco in battle alongside ugly oob fix and holes in terrain

--- a/custom_assets/jak1/levels/glacier/glacier.jsonc
+++ b/custom_assets/jak1/levels/glacier/glacier.jsonc
@@ -753,10 +753,9 @@
         "percent": ["float", 0.75, 0.25],
         "eco-info": ["int32", 9, 2],
         "pickup-percent": ["float",
-        0.1,
-        0.2
+        0.1
         ],
-        "pickup-type": ["int32", 4, 1],
+        "pickup-type": ["int32", 4],
         "max-pickup-count": ["int32", 20, 20],
         "final-pickup": ["int32", 6, 1],
         "play-mode": "'sidekick",
